# legalpdf-to-md

./: Cargo.toml  LICENSE  README.md  prd.md  prd.yaml
patch/: minor-patch  minor-patch-ii  minor-patch-iii  refinement-patch
scripts/: acceptance.sh  gen_ground_truth.sh
src/: lib.rs  main.rs
tests/: check_deps_tests.rs  compute_emit_tests.rs  enumerate_pdfs_tests.rs  law_cleanup_promote_tests.rs  merge_pages_tests.rs  poppler_detect_tests.rs
tests/fixtures/: ground_truth.yaml
